# sourdough-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.changes/: v0.1.0.md
.github/workflows/: pull-requests.yml
migrations/: V00001__initial_schema.sql
src/api/: main.py  models.py
src/cli/: main.py
src/persistence/: database.py  main.py  models.py
src/persistence/__tests__/: conftest.py  test_author.py  test_book.py  util.py
src/persistence/model/: Author.py  Book.py
src/persistence/model/__tests__/: test_author.py  test_book.py
tests/: test_sourdough_py.py
