[tool.poetry]
name = "sourdough-py"
version = "0.1.0"
description = "A delicious starter for your python applications"
authors = ["John Dough <jdough@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7 <4"
fastapi = "^0.76.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"
fastapi-crudrouter = "^0.8.5"
slitherway = "^0.1.3"
# See https://github.com/tiangolo/sqlmodel/issues/327
sqlalchemy = "1.4.17"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
testcontainers = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"